<resources>
    <string name="app_name">valenbisi</string>
    <string name="help">Help</string>
    <string name="icon">Icon</string>
    <string name="home">Home</string>
    <string name="image_1">Image 1</string>
    <string name="_11">11</string>
    <string name="image_2">Image 2</string>
    <string name="_19">19</string>
    <string name="_40m">40m</string>
    <string name="image_4">Image 4</string>
    <string name="_1_plaza_del_mercado_taula_de_canvis">1. Plaza del mercado - Taula de canvis</string>
    <string name="image_on_right">Image on right</string>
    <string name="open">Open</string>
    <string name="image_3">Image 3</string>
    <string name="f">F</string>
    <string name="_2025_02_19_15_59">2025-02-19 15:59</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="img">img</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search...</string>
    <string name="extras">Extras</string>
    <string name="orden">Orden</string>
    <string name="ordenar_por">Ordenar por:</string>
    <string name="filtrar_puesto_de_bicicletas">FILTRAR ESTACIONES</string>
    <string name="filtro_img">filtro.img</string>
    <string name="buttondesc_img">buttondesc.img</string>
    <string name="close_img">close.img</string>
    <string-array name="filtros_array">
        <item>Total de bicicletas</item>
        <item>Bicicletas libres</item>
        <item>Distancia</item>
        <item>ID</item>
    </string-array>
    <string name="station_open">Open</string>
    <string name="station_closed">Closed</string>
    <string name="coordinates_format">%1$s, %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_incidencia">Titulo Incidencia</string>
</resources>