<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:forceDarkAllowed="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/ultra_light_purple"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <!-- ID -->
                <TextView
                    android:id="@+id/idParada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1."
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp" />

                <!-- Address -->
                <TextView
                    android:id="@+id/nombreParada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/worksans"
                    android:gravity="bottom"
                    android:text="Plaza del Mercado Taula de Canvis"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/vistaAvanzada"
                    app:layout_constraintStart_toEndOf="@id/idParada"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Icon -->
                <ImageView
                    android:id="@+id/vistaAvanzada"
                    android:layout_width="30dp"
                    android:layout_height="26dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/c1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/bikesStation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_1"
                        android:src="@drawable/bikes" />

                    <TextView
                        android:id="@+id/bikesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/_19" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/bikeStation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_2"
                        android:src="@drawable/bike" />

                    <TextView
                        android:id="@+id/bikeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/_11" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/ticketStation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_3"
                        android:src="@drawable/ticket" />

                    <TextView
                        android:id="@+id/ticketType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/f" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/locationStation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_4"
                        android:src="@drawable/geoposition" />

                    <TextView
                        android:id="@+id/locationNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/_40m" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">
                <!-- Left Text -->
                <TextView
                    android:id="@+id/tiempoActualizado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/worksans"
                    android:text="@string/_2025_02_19_15_59"
                    android:textColor="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <!-- Right Text and Image -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="UseCompoundDrawables">

                    <!-- Text in the right side -->
                    <TextView
                        android:id="@+id/statustxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/open" />

                    <!-- Image in the right side -->
                    <ImageView
                        android:id="@+id/statusimg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="2dp"
                        android:contentDescription="@string/image_on_right"
                        android:src="@drawable/green_circle"
                        app:layout_constraintVertical_bias="0.5" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>