<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:forceDarkAllowed="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    android:fitsSystemWindows="true"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/light_purple"
        android:paddingStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Centered TextView -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/filtro_img"
                android:scaleType="fitCenter"
                app:tint="@color/cream"
                app:srcCompat="@drawable/filtro" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/savorycurry"
                android:text="@string/filtrar_puesto_de_bicicletas"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_img"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/c1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:text="@string/ordenar_por" />

        <Spinner
            android:background="@drawable/spinner_background"
            android:id="@+id/listfiltros"
            android:layout_width="260dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l1">

        <TextView
            android:id="@+id/filtro_orden_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/worksans"
            android:text="@string/orden" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonAsc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/asc" />

            <ImageButton
                android:id="@+id/imageButtonDesc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/buttondesc_img"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/desc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/worksans"
            android:text="@string/extras" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/worksans"
                android:paddingEnd="7dp"
                android:text="Abierto" />

            <CheckBox
                android:id="@+id/checkBoxAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/worksans"
                android:paddingEnd="7dp"
                android:text="Disponible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l3">

        <Button
            android:id="@+id/buttonFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_purple"
            android:fontFamily="@font/worksans"
            android:text="FILTRAR"
            android:textColorLink="@color/light_purple" />

        <Button
            android:id="@+id/buttonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_purple"
            android:fontFamily="@font/worksans"
            android:text="BORRAR" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>